--- a/src/main/webapp/static/css/recycling.css
+++ b/src/main/webapp/static/css/recycling.css
@@ -132,3 +132,39 @@ input {
 .next-button:hover {
     background-color: #2980b9;
 }
+
+.example {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align text to the left */
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.example p {
+    margin-top: -5px;
+    opacity: 0.7;
+    font-size: 0.8em;
+    text-align: left;
+    margin-left: 275px; /* Adjust margin as needed */
+}
+
+.example img {
+    max-width: 50%;
+    height: auto;
+    align-self: center; /* Center the image within the container */
+}
+
+.upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.upload-info {
+    text-align: center;
+    margin-top: 10px;
+    opacity: 0.7; 
+    font-size: 0.8em; 
+}
