--- a/src/main/webapp/static/css/electricity.css
+++ b/src/main/webapp/static/css/electricity.css
@@ -88,9 +88,9 @@ aside {
     flex: 1;
     border: 1px solid black;
     padding: 20px;
-    padding-top: 30px;
+    padding-top: 40px;
     margin-bottom: 10px;
-    max-height:50%;
+    max-height:25%;
     margin:20px;
     border-radius: 25px;
     background-color: #d0edc7 ;
@@ -114,6 +114,7 @@ input {
 }
 
 .button {
+    margin-top: 20px;
     max-height:25%;
     text-align:center;
 }
@@ -130,4 +131,175 @@ input {
 
 .next-button:hover {
     background-color: #2980b9;
+}
+
+body, h1, p, form {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f1f1f1;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    background-color: #d0edc7;
+    border-bottom: 1px solid black;
+    padding: 0 20px;
+}
+
+main {
+    display: flex;
+    height: 100vh;
+    margin: 0 auto; 
+}
+
+aside {
+    width: 200px;
+    height: 100%;
+    background-color: white;
+    border-right: 2px solid rgb(25, 25, 49);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+
+.logo-container {
+    overflow: hidden;
+    width: 40px;
+    height: 40px;
+    justify-content: flex-end;
+    align-items: flex-end;
+    margin-top: 37px;
+    margin-bottom: 100px;
+    margin-left: 120px;
+    text-align: right;
+
+}
+
+.logo {
+    width: 100%;
+    height: auto;
+}
+
+.title {
+    text-align: center;
+    margin-top: 10px;
+    max-height:30%;
+    text-align: left;
+    padding-left:20px;
+    line-height: 1.6;
+}
+
+.main-content {
+    display: flex;
+    flex: 1;
+    background-color: #fff;
+    justify-content: space-between;
+    overflow: hidden; /* Prevent content overflow */
+}
+
+.left-container {
+    height: 100%;
+    width: 13%;
+}
+
+.right-container {
+    height: 100%;
+    width: 87%;
+    /*border: 1px solid black;*/
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.form {
+    flex: 1;
+    border: 1px solid black;
+    padding: 20px;
+    padding-top: 40px;
+    margin-bottom: 10px;
+    max-height:25%;
+    margin:20px;
+    border-radius: 25px;
+    background-color: #d0edc7 ;
+}
+
+form {
+    display: grid;
+    grid-gap: 10px;
+}
+
+label {
+    font-size: 0.9em;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.button {
+    margin-top: 20px;
+    max-height:25%;
+    text-align:center;
+}
+
+.next-button {
+    background-color: #3498db;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1em;
+    cursor: pointer;
+}
+
+.next-button:hover {
+    background-color: #2980b9;
+}
+
+.example {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align text to the left */
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.example p {
+    margin-top: -5px;
+    opacity: 0.7;
+    font-size: 0.8em;
+    text-align: left;
+    margin-left: 275px; /* Adjust margin as needed */
+}
+
+.example img {
+    max-width: 50%;
+    height: auto;
+    align-self: center; /* Center the image within the container */
+}
+
+.upload {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.upload-info {
+    text-align: center;
+    margin-top: 10px;
+    opacity: 0.7; 
+    font-size: 0.8em; 
 }
