--- a/src/main/webapp/static/user/css/editprofile.css
+++ b/src/main/webapp/static/user/css/editprofile.css
@@ -1,77 +1,113 @@
-.body-container{
-    display: block;
-    padding: 20px;
+.body-container {
+  display: block;
+  padding: 20px;
 }
 
 .main-container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.main-content-container{
-    margin-right: 100px;
-    justify-content: center;
-    width: 100%;
+.main-content-container {
+  margin-right: 100px;
+  justify-content: center;
+  width: 100%;
 }
 
-.rows{
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
+.rows {
+  display: flex;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
-.title{
-    margin: 1rem 0;
+.title {
+  margin: 1rem 0;
 }
 
-input{
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0.5rem;
-    background-color: #f0faf6;
-    border: 0.1rem solid #9E9E9E;
-    border-radius: 0;
-    transition: border-radius 0.3s; /* Add transition property */
+input {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0.5rem;
+  background-color: #f0faf6;
+  border: 0.1rem solid #9e9e9e;
+  border-radius: 0;
+  transition: border-radius 0.3s; /* Add transition property */
 }
 
 input:focus {
-    border-radius: 7px;
+  border-radius: 7px;
 }
 
-select{
+select {
+  width: 100%;
+  padding: 0.5rem;
+  background-color: #f0faf6;
+  border: 0.1rem solid #9e9e9e;
+}
+
+.submitbutton {
+  margin-top: 1rem;
+  font-size: 0.9rem;
+  border: none;
+  width: 20%;
+  border-radius: 8px;
+  padding: 0.5rem 1rem;
+  background-color: rgba(87, 149, 104, 0.2);
+  cursor: pointer;
+  transition: background-color 0.3s; /* Add transition property */
+}
+
+.submitbutton:hover {
+  background-color: rgba(87, 149, 104, 0.5);
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+}
+
+.main-title {
+  font-size: 2rem;
+  margin-bottom: 1.5rem;
+}
+
+.column {
+  width: 100%;
+}
+
+.overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
-    padding: 0.5rem;
-    background-color: #f0faf6;
-    border: 0.1rem solid #9E9E9E;
-}
-
-.submitbutton{
-    margin-top: 1rem;
-    font-size: 0.9rem;
-    border: none;
-    width: 20%;
-    border-radius: 8px;
-    padding: 0.5rem 1rem;
-    background-color: rgba(87, 149, 104, 0.2);
-    cursor: pointer;
-    transition: background-color 0.3s; /* Add transition property */
-}
-
-.submitbutton:hover{
-    background-color: rgba(87, 149, 104, 0.5);
-  }
-
-.center{
-    display: flex;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
     justify-content: center;
-    margin: 2rem 0;
+    align-items: center;
+    z-index: 1000;
 }
 
-.main-title{
-    font-size: 2.0rem;
-    margin-bottom: 1.5rem;
+/* Styles for the popup box */
+.popup {
+    background: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 
-.column{
-    width: 100%;
+#popupOverlay {
+    display: flex;
+}
+
+/* Close button style */
+.close-btn {
+    cursor: pointer;
+    background-color: #8ccab7;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
 }
